--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "deploy": "yarn build && gh-pages -d build",
     "test": "react-scripts test",
